--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -14,15 +14,14 @@ library(tidyverse)
 library(ggplot2)
 library(lubridate)
 
-
-
 filename <- "activity.csv"
 
 mydata <- read.csv(filename, header = TRUE)
 ## make a lubridate, remove na values, calculate total steps
-cleandata <- mydata %>% 
-    mutate(the_date = ymd(date)) %>% filter(complete.cases(.))
-totalsteps <- aggregate(steps~the_date, cleandata, sum)
+cleandata <- mydata %>%
+  mutate(the_date = ymd(date)) %>%
+  filter(complete.cases(.))
+totalsteps <- aggregate(steps ~ the_date, cleandata, sum)
 
 ```
 
@@ -63,17 +62,17 @@ meansteps <- aggregate(steps~interval, cleandata, mean)
 ## average number of steps taken across all days y
 ## which 5 minute interval, on average across all days, 
 ## contains the max number of steps
-maxinterval <- meansteps[which.max(meansteps$steps),"interval"]
-maxsteps <- prettyNum(round(max(meansteps$steps),1), big.mark = ",")
+maxinterval <- meansteps[which.max(meansteps$steps), "interval"]
+maxsteps <- prettyNum(round(max(meansteps$steps), 1), big.mark = ",")
 
-ggplot(meansteps, aes(x=interval, y=steps)) +
-
-    geom_line() + 
-  labs(y="average steps", x = "time intervals",
-        subtitle = paste("The maximum average steps
-                    is", maxsteps,"\n In interval", maxinterval)) +
-        theme(legend.position = "none") 
-
+ggplot(meansteps, aes(x = interval, y = steps)) +
+  geom_line() +
+  labs(
+    y = "average steps", x = "time intervals",
+    subtitle = paste("The maximum average steps
+                    is", maxsteps, "\n In interval", maxinterval)
+  ) +
+  theme(legend.position = "none")
 
 ```
 
@@ -84,50 +83,63 @@ The above calculations were made after omitting missing values.  Missing values 
 missing_step_values <- prettyNum(sum(is.na(mydata$steps)), big.mark = ",")
 
 ## days missing the most values
-missing_by_date <- mydata %>% 
-    mutate(nostepdata = is.na(steps), the_date = ymd(date)) %>%
-    filter(nostepdata == TRUE)
-missing_by_date <- aggregate(nostepdata~the_date, missing_by_date, sum)
+missing_by_date <- mydata %>%
+  mutate(nostepdata = is.na(steps), the_date = ymd(date)) %>%
+  filter(nostepdata == TRUE)
+missing_by_date <- aggregate(nostepdata ~ the_date, missing_by_date, sum)
 
-ggplot(missing_by_date, aes(x=as_date(the_date), 
-                            y=nostepdata,  label = (wday(the_date, label=TRUE)))) + 
-
-  geom_bar(stat="identity") + 
-            geom_label(aes(fill = nostepdata),colour = "white", size =3) +
-  labs(y="Missing step value per day", 
-       x = "Date",
-        subtitle = paste("The data set is missing ", missing_step_values, 
-                         "step values"))
+ggplot(missing_by_date, aes(
+  x = as_date(the_date),
+  y = nostepdata, label = (wday(the_date, label = TRUE))
+)) +
+  geom_bar(stat = "identity") +
+  geom_label(aes(fill = nostepdata), colour = "white", size = 3) +
+  labs(
+    y = "Missing step value per day",
+    x = "Date",
+    subtitle = paste(
+      "The data set is missing ", missing_step_values,
+      "step values"
+    )
+  )
 
 ```
 From the graph, the steps for an entire day appears to be there or be absent.
 A strategy for filling in the missing data is to use the data from a similar day.  There is a difference in activity for weekend versus weekdays (discussed in the next section).  The days that we are missing are:
 ```{r chunk-whichdays}
-which.days <- mydata %>% 
-    mutate(nostepdata = is.na(steps), the_date = ymd(date), 
-           the.day = wday(the_date, label=TRUE)) %>%
-           filter(nostepdata == TRUE) %>% 
-           select(-c(steps,date,interval)) %>%
-    group_by(the_date) %>% summarise(my.day = first(the.day))
+which.days <- mydata %>%
+  mutate(
+    nostepdata = is.na(steps), the_date = ymd(date),
+    the.day = wday(the_date, label = TRUE)
+  ) %>%
+  filter(nostepdata == TRUE) %>%
+  select(-c(steps, date, interval)) %>%
+  group_by(the_date) %>%
+  summarise(my.day = first(the.day))
 
 
-number.of.weeks = ceiling(time_length(interval(min(cleandata$the_date),
-                                       max(cleandata$the_date)), 
-                              unit = "week"))
+number.of.weeks <- ceiling(time_length(interval(
+  min(cleandata$the_date),
+  max(cleandata$the_date)
+),
+unit = "week"
+))
 
-ggplot(which.days, aes(x= my.day, 
-                       fill = my.day,
-                       label = "Day of the week")) +
-
-  geom_histogram(stat="count") +
-     guides(fill=FALSE) +
-
-  labs(y="Number of days of missing data", 
-       x = "Day of Week",
-        subtitle = paste("The dataset has ", number.of.weeks, 
-                         " weeks of data"))
-
-
+ggplot(which.days, aes(
+  x = my.day,
+  fill = my.day,
+  label = "Day of the week"
+)) +
+  geom_histogram(stat = "count") +
+  guides(fill = FALSE) +
+  labs(
+    y = "Number of days of missing data",
+    x = "Day of Week",
+    subtitle = paste(
+      "The dataset has ", number.of.weeks,
+      " weeks of data"
+    )
+  )
 
 
 ```
@@ -138,25 +150,29 @@ When we look at the average number of steps in an interval, there are no visible
 library(imputeTS)
 library(knitr)
 
-## make univariate imputed data based on mean 
+## make univariate imputed data based on mean
 
-imp.data <- na_mean(mydata) 
+imp.data <- na_mean(mydata)
 
-imp.mean.actual = mean(imp.data$steps)
-mean.actual = mean(mydata$steps, na.rm = TRUE)
-imp.median.actual = median(imp.data$steps)
-median.actual = median(mydata$steps, na.rm = TRUE)
+imp.mean.actual <- mean(imp.data$steps)
+mean.actual <- mean(mydata$steps, na.rm = TRUE)
+imp.median.actual <- median(imp.data$steps)
+median.actual <- median(mydata$steps, na.rm = TRUE)
 
-imp.mean.pretty = prettyNum(round(imp.mean.actual,2),big.mark = ",")
+imp.mean.pretty <- prettyNum(round(imp.mean.actual, 2), big.mark = ",")
 
-mean.pretty = prettyNum(round(mean.actual,2),big.mark = ",")
+mean.pretty <- prettyNum(round(mean.actual, 2), big.mark = ",")
 
 
-mm_compare <- data.frame(Mean = c(imp.mean.pretty, mean.pretty),
-                        Median = c(imp.median.actual, median.actual),
-                        Label = c("Imputed", "Actual"),
-                        Difference = c(imp.mean.actual - mean.actual,
-                                       imp.median.actual - median.actual))
+mm_compare <- data.frame(
+  Mean = c(imp.mean.pretty, mean.pretty),
+  Median = c(imp.median.actual, median.actual),
+  Label = c("Imputed", "Actual"),
+  Difference = c(
+    imp.mean.actual - mean.actual,
+    imp.median.actual - median.actual
+  )
+)
 
 
 knitr::kable(mm_compare, caption = "Comparing Imputed and Actual values with respect to a time interval")
@@ -173,20 +189,23 @@ Lets compute an interval graph for weekdays vs weekends and see
 
 ```{r chunk-weekends}
 
-clean.datawday <- mydata %>% mutate(the_date = ymd(date)) %>% 
-              filter(complete.cases(.)) %>% 
-              mutate(weekend = (wday(the_date,label=TRUE) == "Sat" |
-                     wday(the_date,label =TRUE) == "Sun"))
+clean.datawday <- mydata %>%
+  mutate(the_date = ymd(date)) %>%
+  filter(complete.cases(.)) %>%
+  mutate(weekend = (wday(the_date, label = TRUE) == "Sat" |
+    wday(the_date, label = TRUE) == "Sun"))
 
-datawday.mean <- clean.datawday %>% 
-    group_by(interval,weekend) %>% summarise_if(is.numeric,mean)  
+datawday.mean <- clean.datawday %>%
+  group_by(interval, weekend) %>%
+  summarise_if(is.numeric, mean)
 
 
-ggplot(datawday.mean, aes(x=interval, y=steps, group = weekend, 
-                          shape = weekend, 
-                          color = weekend)) +
-
-    geom_line() 
+ggplot(datawday.mean, aes(
+  x = interval, y = steps, group = weekend,
+  shape = weekend,
+  color = weekend
+)) +
+  geom_line()
 
 
 ```
@@ -195,22 +214,35 @@ Yes, there is a visible difference between how many steps were taken and when th
 
 ```{r chunk-week}
 
-days.steps.actual <- mydata %>%  mutate(the_date = ymd(date),
-                                 the.day = wday(the_date, label=TRUE)) %>% 
-                          filter(complete.cases(.)) %>%
-                          group_by(the.day) %>% summarise(steps = mean(steps))
-days.steps.imp <- imp.data %>% mutate(the_date = ymd(date),
-                                 the.day = wday(the_date, label=TRUE)) %>% 
-                          group_by(the.day) %>% summarise(steps = mean(steps))
+days.steps.actual <- mydata %>%
+  mutate(
+    the_date = ymd(date),
+    the.day = wday(the_date, label = TRUE)
+  ) %>%
+  filter(complete.cases(.)) %>%
+  group_by(the.day) %>%
+  summarise(steps = mean(steps))
+days.steps.imp <- imp.data %>%
+  mutate(
+    the_date = ymd(date),
+    the.day = wday(the_date, label = TRUE)
+  ) %>%
+  group_by(the.day) %>%
+  summarise(steps = mean(steps))
 
 
-ggplot(days.steps.actual, aes(x= the.day, y = steps,
-                       fill = "actual")) +
+ggplot(days.steps.actual, aes(
+  x = the.day, y = steps,
+  fill = "actual"
+)) +
   geom_col() +
-  geom_col(mapping = aes(x = the.day, y = steps, fill = "imputed"),
-           data = days.steps.imp) +
-   labs(subtitle = "Average Steps by Day of the week",
-         x = "Day of Week",
-        y = "Average Steps per Day")
-  
+  geom_col(
+    mapping = aes(x = the.day, y = steps, fill = "imputed"),
+    data = days.steps.imp
+  ) +
+  labs(
+    subtitle = "Average Steps by Day of the week",
+    x = "Day of Week",
+    y = "Average Steps per Day"
+  )
 ```
